--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ section {
 #contact .contact-link a {
 
     font-size: 30px;
-    border-radius: 123px;
+    border-radius: 50%;
     background: #11001ce0;
     box-shadow: -14px -14px 28px rgba(14, 0, 22, 0.5),
         14px 14px 28px rgba(34, 0, 58, 0.5);
@@ -268,6 +268,29 @@ footer p {
         font-size: 20px;
         padding: 15px 6vw;
     }
+
+    #contact {
+        background-color: var(--russian-violet);
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
+        min-height: 90vh;
+    }
+
+    #contact h1 {
+        font-size: 2.5em;
+    }
+
+    #contact .contact-link {
+        gap: 38px;
+    }
+    #contact .contact-link a {
+        font-size: 25px;
+        padding: 0.8em;
+    
+    }
+
 }
 
 @media only screen and (max-width: 430px) {
@@ -293,6 +316,21 @@ footer p {
         max-width: 90vw;
         font-size: 3em;
     }
+    #contact {
+        min-height: 60vh;
+    }
+    #contact h1 {
+        font-size: 2.3em;
+    }
+
+    #contact .contact-link {
+        gap: 25px;
+    }
+    #contact .contact-link a {
+        font-size: 22px;
+        padding: 0.8em;
+    
+    }
 }
 
 
@@ -315,15 +353,4 @@ footer p {
 
 #myBtn:hover {
     background-color: rgb(94, 52, 207);
-}
-
-.js div#preloader {
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 999;
-    width: 100%;
-    height: 100%;
-    overflow: visible;
-    background: #0d0036 url('https://svgshare.com/i/gjt.svg') no-repeat center center;
 }
