--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ section {
     align-items: center;
     box-shadow: 0 0 5px 5px rgb(0, 0, 0);
     background-color: var(--dark-purple);
+    transition: all 0.3s ease;
 }
 
 #navbar #logo {
@@ -90,7 +91,7 @@ section {
 #welcome-section .welcome_image img {
     max-width: 100%;
     width: 400px;
-    height: auto;
+    height: 400px;
     clip-path: circle(50% at 50% 50%);
 }
 
@@ -109,7 +110,12 @@ section {
     color: var(--gainsboro);
     text-shadow: 0px 0px 15px #000000;
 }
-
+.welcome_title h1 {
+    transition: word-spacing 0.3s ease;
+}
+.welcome_title:hover h1 {
+    word-spacing: 10px;
+}
 #welcome-section .welcome_prof {
     font-size: 2rem;
     color: var(--fuzzy-wuzzy);
@@ -146,11 +152,13 @@ section {
 }
 
 .project-tile {
-    box-shadow: 0 0 10px 1px rgb(0, 0, 0);
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     background: var(--old-lavender);
     text-decoration: none;
     height: auto;
-    border-radius: 5px;
+    border-radius: 10px;
+    transition: box-shadow 0.5s ease,
+                transform 0.3s ease;
 }
 
 .project-image {
@@ -168,6 +176,11 @@ section {
     color: var(--xiketic);
     text-shadow: 0px 0px 1px var(--fuzzy-wuzzy);
     transition: transform 0.3s ease;
+}
+
+.project-tile:hover {
+    transform: translateY(-5px);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .project-tile:hover .project-image {
