--- a/style.css
+++ b/style.css
@@ -110,12 +110,15 @@ section {
     color: var(--gainsboro);
     text-shadow: 0px 0px 15px #000000;
 }
+
 .welcome_title h1 {
     transition: word-spacing 0.3s ease;
 }
+
 .welcome_title:hover h1 {
     word-spacing: 10px;
 }
+
 #welcome-section .welcome_prof {
     font-size: 2rem;
     color: var(--fuzzy-wuzzy);
@@ -153,27 +156,29 @@ section {
 
 .project-tile {
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    background: var(--old-lavender);
+    background: #11001c;
     text-decoration: none;
     height: auto;
     border-radius: 10px;
     transition: box-shadow 0.5s ease,
-                transform 0.3s ease;
+        transform 0.3s ease;
 }
 
 .project-image {
-    height: calc(100% - 6.8rem);
+    height: 250px;
     width: 100%;
     object-fit: cover;
-    filter: blur(2px);
-    transition: filter 0.3s ease;
+    filter: brightness(40%);
+    transition: all 0.3s ease;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 .project-title {
     font-size: 1.2rem;
     padding: 2rem 0.5rem;
     text-decoration: none;
-    color: var(--xiketic);
+    color: whitesmoke;
     text-shadow: 0px 0px 1px var(--fuzzy-wuzzy);
     transition: transform 0.3s ease;
 }
@@ -285,6 +290,9 @@ footer p {
         padding: 15px 6vw;
     }
 
+    .project-image {
+        filter: none;
+    }
     #contact {
         background-color: var(--russian-violet);
         display: flex;
@@ -332,9 +340,6 @@ footer p {
     .projects-section-header {
         max-width: 90vw;
         font-size: 3em;
-    }
-    .project-image {
-        filter: none;
     }
 
     #contact {
