--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ section {
 }
 
 .project-tile:hover {
+    background: #210036;
     transform: translateY(-5px);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
@@ -293,6 +294,7 @@ footer p {
     .project-image {
         filter: none;
     }
+
     #contact {
         background-color: var(--russian-violet);
         display: flex;
@@ -381,4 +383,37 @@ footer p {
 
 #myBtn:hover {
     background-color: rgb(94, 52, 207);
+}
+
+
+
+
+/* Fade And Scroll */
+
+
+.fade {
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
+}
+
+.fade-out {
+    opacity: 0;
+}
+
+.fade-in {
+    opacity: 1;
+}
+
+[data-scroll] {
+    transition: all 0.5s;
+}
+
+[data-scroll="in"] {
+    transform: translateX(0);
+}
+
+[data-scroll="out"] {
+    transform: translateX(-100vw);
 }
